package eapli.base.exam.dto;

public class ExamDTO {
}
