package eapli.base.grade.domain;

public enum TypeOfGrade {
    APPROVED, DISAPPROVED;
}